--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
@@ -20,19 +20,37 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@mikro-orm/cli": "6.1.12",
+        "@mikro-orm/core": "6.1.12",
+        "@mikro-orm/migrations": "6.1.12",
+        "@mikro-orm/nestjs": "5.2.3",
+        "@mikro-orm/postgresql": "6.1.12",
         "@nestjs/common": "10.0.0",
+        "@nestjs/config": "3.2.1",
         "@nestjs/core": "10.0.0",
+        "@nestjs/jwt": "10.2.0",
+        "@nestjs/mapped-types": "2.0.5",
+        "@nestjs/passport": "10.0.3",
         "@nestjs/platform-express": "10.0.0",
-        "reflect-metadata": "0.2.0",
+        "bcrypt": "5.1.1",
+        "cookie-parser": "1.4.6",
+        "date-fns-tz": "2.0.1",
+        "joi": "17.12.3",
+        "passport": "0.7.0",
+        "passport-jwt": "4.0.1",
+        "passport-local": "1.0.0",
         "rxjs": "7.8.1"
     },
     "devDependencies": {
         "@nestjs/cli": "10.0.0",
         "@nestjs/schematics": "10.0.0",
         "@nestjs/testing": "10.0.0",
+        "@types/cookie-parser": "1.4.7",
         "@types/express": "4.17.17",
         "@types/jest": "29.5.2",
         "@types/node": "20.3.1",
+        "@types/passport-jwt": "4.0.1",
+        "@types/passport-local": "1.0.38",
         "@types/supertest": "6.0.0",
         "@typescript-eslint/eslint-plugin": "6.0.0",
         "@typescript-eslint/parser": "6.0.0",
@@ -40,14 +58,19 @@
         "eslint-config-prettier": "9.0.0",
         "eslint-plugin-prettier": "5.0.0",
         "jest": "29.5.0",
-        "prettier": "3.0.0",
         "source-map-support": "0.5.21",
         "supertest": "6.3.3",
         "ts-jest": "29.1.0",
         "ts-loader": "9.4.3",
         "ts-node": "10.9.1",
-        "tsconfig-paths": "4.2.0",
-        "typescript": "5.1.3"
+        "tsconfig-paths": "4.2.0"
+    },
+    "mikro-orm": {
+        "useTsNode": true,
+        "configPaths": [
+            "./src/common/database/mikro-orm.config.ts",
+            "./dist/common/database/mikro-orm.config.js"
+        ]
     },
     "jest": {
         "moduleFileExtensions": [
