--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
+        "baseUrl": "src",
+        "paths": {
+            "@common/*": ["./common/*"],
+            "@modules/*": ["./modules/*"]
+        },
         "module": "commonjs",
         "declaration": true,
         "removeComments": true,
@@ -9,7 +14,6 @@
         "target": "ES2021",
         "sourceMap": true,
         "outDir": "./dist",
-        "baseUrl": "./",
         "incremental": true,
         "skipLibCheck": true,
         "strictNullChecks": false,
