feat: add frontend auth pages

--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -22,6 +22,7 @@ rules:
     react/jsx-no-bind:
         - error
         - ignoreRefs: true
+          allowArrowFunctions: true
 
 overrides:
     - files:
@@ -35,13 +36,4 @@ overrides:
           - vite-env.d.ts
       rules:
           unicorn/prevent-abbreviations:
-              - off
-    - files:
-          - src/bundles/common/components/ui/*.tsx
-      rules:
-          unicorn/prevent-abbreviations:
-              - off
-          '@typescript-eslint/consistent-type-definitions':
-              - off
-          no-restricted-syntax:
               - off
