--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,6 +7,7 @@ parserOptions:
         - ./tsconfig.json
         - ./backend/tsconfig.json
         - ./frontend/tsconfig.json
+        - ./shared/tsconfig.json
 
 settings:
     typescript: true
