--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,21 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "3.3.4",
+        "@radix-ui/react-label": "2.0.2",
         "@radix-ui/react-slot": "1.0.2",
+        "@reduxjs/toolkit": "2.2.3",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.0",
         "lucide-react": "0.365.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "7.51.2",
+        "react-redux": "9.1.0",
         "react-router-dom": "6.22.3",
         "tailwind-merge": "2.2.2",
-        "tailwindcss-animate": "1.0.7"
+        "tailwindcss-animate": "1.0.7",
+        "yup": "1.4.0"
     },
     "devDependencies": {
         "@types/node": "20.12.5",
@@ -42,6 +48,7 @@
         "postcss": "8.4.38",
         "tailwindcss": "3.4.3",
         "typescript": "5.2.2",
-        "vite": "5.2.8"
+        "vite": "5.2.8",
+        "vite-plugin-svgr": "4.2.0"
     }
 }
