--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "npm:": "9.x.x"
     },
     "workspaces": [
+        "shared",
         "backend",
         "frontend"
     ],
     "scripts": {
-        "install:all": "npm i",
+        "install:all": "npm i && npm run build:shared",
+        "build:shared": "npm run build -w shared",
         "build:frontend": "npm run build -w frontend",
         "build:backend": "npm run build -w backend",
         "format": "prettier --write \"**/*.{ts,tsx,json,md,css,html,yml}\"",
@@ -26,6 +28,7 @@
         "@commitlint/cli": "19.2.1",
         "@commitlint/config-conventional": "19.1.0",
         "@ls-lint/ls-lint": "2.2.3",
+        "@typescript-eslint/eslint-plugin": "7.6.0",
         "@typescript-eslint/utils": "7.5.0",
         "editorconfig-checker": "5.1.5",
         "eslint": "8.57.0",
@@ -39,6 +42,7 @@
         "stylelint": "16.3.1",
         "stylelint-config-standard": "36.0.0",
         "stylelint-order": "6.0.4",
+        "tsc-alias": "1.8.8",
         "typescript": "5.3.3"
     },
     "simple-git-hooks": {
