--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,7 @@
         "react-redux": "9.1.0",
         "react-router-dom": "6.22.3",
         "tailwind-merge": "2.2.2",
-        "tailwindcss-animate": "1.0.7",
-        "yup": "1.4.0"
+        "tailwindcss-animate": "1.0.7"
     },
     "devDependencies": {
         "@types/node": "20.12.5",
