--- a/shared/package.json
+++ b/shared/package.json
@@ -1,7 +1,7 @@
 {
     "name": "shared",
     "version": "1.0.0",
-    "type": "module",
+    "type": "commonjs",
     "main": "build/index.js",
     "types": "src/index.ts",
     "engines": {
