--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -4,7 +4,7 @@
     "exclude": ["node_modules"],
     "compilerOptions": {
         "target": "ESNext",
-        "module": "ESNext",
+        "module": "CommonJS",
         "moduleResolution": "Node",
         "esModuleInterop": true,
         "baseUrl": ".",
