--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,13 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@casl/ability": "6.7.1",
         "@mikro-orm/cli": "6.1.12",
         "@mikro-orm/core": "6.1.12",
         "@mikro-orm/migrations": "6.1.12",
         "@mikro-orm/nestjs": "5.2.3",
         "@mikro-orm/postgresql": "6.1.12",
+        "@mikro-orm/seeder": "6.1.12",
         "@nestjs/common": "10.3.7",
         "@nestjs/config": "3.2.1",
         "@nestjs/core": "10.0.0",
@@ -58,6 +60,7 @@
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.0.0",
         "eslint-plugin-prettier": "5.0.0",
+        "eslint-plugin-simple-import-sort": "12.1.0",
         "jest": "29.5.0",
         "source-map-support": "0.5.21",
         "supertest": "6.3.3",
