--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@casl/ability": "6.7.1",
+        "@casl/react": "3.1.0",
         "@hookform/resolvers": "3.3.4",
         "@radix-ui/react-accordion": "1.1.2",
         "@radix-ui/react-checkbox": "1.0.4",
