--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
         "aws-sdk": "2.1606.0",
         "bcrypt": "5.1.1",
         "cookie-parser": "1.4.6",
+        "date-fns": "3.6.0",
         "date-fns-tz": "2.0.1",
         "joi": "17.12.3",
         "multer": "1.4.5-lts.1",
