--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
         "@reduxjs/toolkit": "2.2.3",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.0",
+        "cmdk": "1.0.0",
         "date-fns": "3.6.0",
         "lucide-react": "0.365.0",
         "next-themes": "0.3.0",
