--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,8 @@
         "date-fns": "3.6.0",
         "date-fns-tz": "2.0.1",
         "joi": "17.12.3",
+        "jspdf": "2.5.1",
+        "jspdf-autotable": "3.8.2",
         "multer": "1.4.5-lts.1",
         "passport": "0.7.0",
         "passport-jwt": "4.0.1",
