--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,10 @@
         "@nestjs/mapped-types": "2.0.5",
         "@nestjs/passport": "10.0.3",
         "@nestjs/platform-express": "10.3.8",
+        "@nestjs/platform-socket.io": "10.3.8",
+        "@nestjs/websockets": "10.3.8",
         "@sendgrid/mail": "8.1.3",
+        "@types/socket.io": "3.0.2",
         "aws-sdk": "2.1606.0",
         "bcrypt": "5.1.1",
         "cookie-parser": "1.4.6",
