--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
         "clsx": "2.1.0",
         "cmdk": "1.0.0",
         "date-fns": "3.6.0",
+        "framer-motion": "11.2.5",
         "lucide-react": "0.365.0",
         "next-themes": "0.3.0",
         "react": "18.2.0",
@@ -48,6 +49,7 @@
         "react-hook-form": "7.51.2",
         "react-redux": "9.1.0",
         "react-router-dom": "6.22.3",
+        "socket.io-client": "4.7.5",
         "sonner": "1.4.41",
         "tailwind-merge": "2.2.2",
         "tailwindcss-animate": "1.0.7"
