--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-navigation-menu": "1.1.4",
         "@radix-ui/react-popover": "1.0.7",
         "@radix-ui/react-progress": "1.0.3",
+        "@radix-ui/react-scroll-area": "1.0.5",
         "@radix-ui/react-select": "2.0.0",
         "@radix-ui/react-separator": "1.0.3",
         "@radix-ui/react-slot": "1.0.2",
@@ -36,7 +37,7 @@
         "@reduxjs/toolkit": "2.2.3",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.0",
-        "cmdk": "1.0.0",
+        "cmdk": "0.2.1",
         "date-fns": "3.6.0",
         "framer-motion": "11.2.5",
         "lucide-react": "0.365.0",
@@ -47,6 +48,7 @@
         "react-day-picker": "8.10.1",
         "react-dom": "18.2.0",
         "react-hook-form": "7.51.2",
+        "react-phone-number-input": "3.4.3",
         "react-redux": "9.1.0",
         "react-router-dom": "6.22.3",
         "socket.io-client": "4.7.5",
