--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,7 +13,7 @@
         "allowSyntheticDefaultImports": true,
         "target": "ES2021",
         "sourceMap": true,
-        "outDir": "./dist",
+        "outDir": "./build",
         "incremental": true,
         "skipLibCheck": true,
         "strictNullChecks": false,
