--- a/frontend/tsconfig.build.json
+++ b/frontend/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
     "extends": "./tsconfig.json",
-    "include": ["src", "./packages.d.ts"],
+    "include": ["src"],
     "compilerOptions": {
         "outDir": "build"
     }
