--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
         "lint:js": "npm run lint:js --workspaces --if-present -- --max-warnings=0",
         "lint:css": "npm run lint:css --workspaces --if-present",
         "lint:format": "prettier --check \"**/*.{ts,tsx,json,md,css,html,yml}\"",
-        "lint": "npm run lint:editor && npm run lint:fs && npm run lint:format && npm run lint:type && npm run lint:js && npm run lint:css"
+        "lint": "npm run lint:editor && npm run lint:fs && npm run lint:format && npm run lint:type && npm run lint:js && npm run lint:css",
+        "build": "npm run build:shared && npm run build:backend && npm run build:frontend && sh ./prepare-build.sh",
+        "prestart": "npm install --include=dev && npm run build",
+        "start": "cd ./build/backend && node main"
     },
     "devDependencies": {
         "@commitlint/cli": "19.2.1",
