--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
         "@nestjs/passport": "10.0.3",
         "@nestjs/platform-express": "10.3.8",
         "@nestjs/platform-socket.io": "10.3.8",
+        "@nestjs/serve-static": "4.0.2",
         "@nestjs/websockets": "10.3.8",
         "@sendgrid/mail": "8.1.3",
         "@types/socket.io": "3.0.2",
