--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,7 +3,7 @@ name: Deployment
 env:
     AWS_REGION: eu-central-1
     EBS_APP_NAME: drone-ordering-app
-    ENVIRONMENT: development
+    ENVIRONMENT: Drone-ordering-app-env
 
 on:
     workflow_dispatch:
